--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "edge-functions-examples",
   "description": "Explore a library of reference examples for learning about Edge Functions on Netlify.",
   "version": "1.0.0",
-  "scripts": {},
+  "scripts": {
+    "start": "netlify dev --offline"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/netlify/edge-functions-examples.git"
@@ -14,5 +16,7 @@
     "url": "https://github.com/netlify/edge-functions-examples/issues"
   },
   "homepage": "https://github.com/netlify/edge-functions-examples#readme",
-  "dependencies": {}
+  "devDependencies": {
+    "netlify-cli": "^12.0.9"
+  }
 }
